clap_derive/tests/ui/subcommand_and_methods.stderr
error: methods in attributes are not allowed for subcommand
  --> $DIR/subcommand_and_methods.rs:16:12
   |
16 |     #[clap(subcommand, long)]
   |            ^^^^^^^^^^
